Thu Feb 22 15:59:12 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/config-win32-common.h: Change the comments around ACE_HAS_PENTIUM
          to more accurately reflect its use and setting. With the switch to
          QueryPerformanceCounter() for high-res timers on Windows, this
          setting doesn't have any affect on timers, but it is used in
          some CDR operations. This resolves Bugzilla #1410.

        * ace/OS_NS_time.inl (gethrtime):
        * ace/gethrtime.cpp: Remove the comments directing the reader to a
          description of using RDTSC on Windows. The comment is long gone, and
          RDTSC isn't used on Windows/VC any longer anyway.

Thu Feb 22 15:07:22 UTC 2007  Ciju John  <johnc@ociweb.com>

        * bin/MakeProjectCreator/modules/GNUACEProjectCreator.pm:
        * bin/MakeProjectCreator/templates/gnu.mpd:
          Additions to support DDS specific build rules and versioning.

Thu Feb 22 13:56:42 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Makefile.am:
          Added Notification_Queue.{h,cpp,inl}:

        * ace/OS_NS_dirent.inl:
          Added include when ACE_LACKS_ALPHASORT is defined

Thu Feb 22 13:03:01 UTC 2007  Carlos O'Ryan  <coryan@atdesk.com>

        * Merged changes from the bug_2815 branch.  From revision 77182 to
          revision 77315.

	Tue Feb 20 18:17:00 UTC 2007  Carlos O'Ryan  <coryan@atdesk.com>

        * ace/ace_for_tao.mpc:
          Add Notification_Queue.cpp to this file too.  Thanks to Johnny
          Willemsen for pointing this out.

          Mon Feb 19 21:53:58 UTC 2007  Carlos O'Ryan  <coryan@atdesk.com>

        * ace/Intrusive_List.inl:
          I learned a minute ago that std::swap() was kosher.  Use it in
          favor of ACE_Swap<>.

          Mon Feb 19 21:47:48 UTC 2007  Carlos O'Ryan  <coryan@atdesk.com>

        * tests/run_test.lst:
        * tests/Bug_2815_Regression_Test.cpp: